--- a/nextflow.config
+++ b/nextflow.config
@@ -1,1 +1,6 @@
 process.container = 'nextflow/bash'
+tower {
+  accessToken = '014e190547fb8a913b0c8d15a838ebf91fcfda99'
+  endpoint = 'http://nflowjbdns.eastus2.cloudapp.azure.com:8000/api'
+  enabled = true
+}
